# rudder

./: .gitignore  README.md  SECURITY.md
ci/: rust.sh
policies/rudderc/: Cargo.toml
policies/supply-chain/: config.toml
policies/toto/: technique.yml
relay/sources/relayd/: Cargo.toml  Makefile  README.md
relay/sources/relayd/benches/: runlog.rs
relay/sources/relayd/man/: rudder-relayd.1.adoc
relay/sources/relayd/src/: api.rs  cli.rs  configuration.rs  error.rs  input.rs  lib.rs  metrics.rs  output.rs  processing.rs  relayd.rs  remote_run.rs  stats.rs
relay/sources/relayd/src/api/: remote_run.rs  shared_files.rs  shared_folder.rs  system.rs
relay/sources/relayd/src/configuration/: logging.rs  main.rs
relay/sources/relayd/src/data/: node.rs  nodes.rs  report.rs  reporting.rs  runinfo.rs  runlog.rs  shared_file.rs
relay/sources/relayd/src/fake/: reporting.rs
relay/sources/relayd/src/input/: watch.rs
relay/sources/relayd/src/output/: database.rs  upstream.rs
relay/sources/relayd/src/processing/: inventory.rs  reporting.rs
relay/sources/relayd/tests/: api_system_status.rs  processing_reporting.rs  processing_reporting_old.rs  remote_run.rs  reports_database.rs  shared_folder.rs
relay/sources/relayd/tests/files/: nodeslist.json  relayd.conf  relayd.toml
relay/sources/relayd/tests/files/config/: logging.conf  main.conf
relay/sources/relayd/tests/keys/: localhost.cert  localhost2.cert  nodescerts.pem
relay/sources/relayd/tests/test_simple/: relayd.conf
relay/sources/relayd/tests/test_smime/: normal-diff.signed  normal.signed
relay/sources/relayd/tools/: add_timestamp.sh  create-database.sql  rudder-relayd.conf  rudder-relayd.service
relay/sources/relayd/tools/config/: main.conf
rudder-lang/docs/: compiler.adoc  index.adoc
(+47 files in other folders)
