[package]
name = "relayd"
version = "0.0.0-dev"
authors = ["Rudder developers <dev@rudder.io>"]
edition = "2018"
description = "Rudder relay component"
readme = "README.md"
homepage = "https://www.rudder.io"
repository = "https://github.com/Normation/rudder"
license = "GPL-3.0-or-later"

[[bin]]
name = "rudder-relayd"
path = "src/relayd.rs"

[[bench]]
harness = false
name = "benches"

[dependencies]
anyhow = "1"
bytes = "0.5"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1", default-features = false, features = ["postgres", "chrono", "r2d2"] }
flate2 = { version = "1", default-features = false, features = ["zlib"] }
futures = "0.3"
hex = "0.4"
humantime = "2"
# 0.13.9 for tokio 0.3
hyper = { version = "0.13.8", default-features = false }
# 0.9 for tokio 0.3
inotify = "0.8"
log = "0.4"
md-5 = "0.9"
nom = "6"
openssl = "0.10"
regex = "1"
reqwest = { version = "0.10", features = ["stream", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.9"
structopt = { version = "0.3", default-features = false }
thiserror = "1"
tokio = { version = "0.2", features = ["full"] }
toml = "0.5"
# Compile dev and release with trace logs enabled
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_trace"] }
tracing-log = { version = "0.1", default-features = false, features = ["log-tracer"] }
tracing-subscriber = { version = "0.1", default-features = false, features = ["env-filter", "fmt", "tracing-log"] }
warp = { version = "0.2", default-features = false }
zip = "0.5"

[dev-dependencies]
criterion = "0.3"
filetime = "0.2"
proptest = "0.10"
tempfile = "3"
